# ft_printf

./: CMakeLists.txt  Makefile  a.out  dowork.bat  ft_printf.c  ft_printf_c.c  ft_printf_d.c  ft_printf_helper.c  ft_printf_p.c  ft_printf_s.c  ft_printf_u.c  ft_printf_x.c  main.c  util.c  util2.c
includes/: ft_printf.h
libft/: CMakeLists.txt  Makefile  ft_lstmap.c  ft_lstnew.c  ft_putunbr_base_fd.c  ft_strncmp.c  libft.h
